[package]
name = "direct2d"
version = "0.3.0"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
description = "A safe abstraction for drawing with Direct2D"
repository = "https://github.com/Connicpu/direct2d-rs"
documentation = "https://docs.rs/direct2d/*/x86_64-pc-windows-msvc/direct2d/"
license = "MIT/Apache-2.0"
readme = "CRATE_README.md"

[package.metadata.docs.rs]
features = ["docs"]
default-target = "x86_64-pc-windows-msvc"

[target.'cfg(windows)'.dependencies]
directwrite = "0.1.3"
wio = "0.2"
dxgi = "0.1.6"
either = "1.5.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.5"
features = ["d2d1_1", "d3d11", "dwrite", "winbase", "libloaderapi", "errhandlingapi", "windef", "winuser"]

[target.'cfg(windows)'.dependencies.math2d]
version = "0.1.2"
features = ["d2d"]

[target.'cfg(windows)'.dev-dependencies]
lazy_static = "1.0"
direct3d11 = "0.1.3"
image = "0.18.0"
rand = "0.4"

[features]
docs = []

