[package]
name = "direct2d"
version = "0.3.0-alpha1"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
description = "A safe abstraction for drawing with Direct2D"
repository = "https://github.com/Connicpu/direct2d-rs"
documentation = "https://docs.rs/direct2d/*/x86_64-pc-windows-msvc/direct2d/"
license = "MIT/Apache-2.0"
readme = "CRATE_README.md"
edition = "2018"
workspace = ".."

[package.metadata.docs.rs]
features = ["docs"]
default-target = "x86_64-pc-windows-msvc"

[target.'cfg(windows)'.dependencies]
wio = "0.2"
either = "1.5.0"

checked-enum = "0.1.1-alpha1"
auto-enum = "0.2.0-alpha1"

com-wrapper = "0.1.0-alpha2"
derive-com-wrapper = "0.1.0-alpha4"

[target.'cfg(windows)'.dependencies.dxgi]
version = "0.3.0-alpha3"
path = "../dxgi"

[target.'cfg(windows)'.dependencies.directwrite]
version = "0.3.0-alpha3"
path = "../directwrite"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.5"
features = ["d2d1_1", "d3d11", "dwrite", "winbase", "libloaderapi", "errhandlingapi", "windef", "winuser"]

[target.'cfg(windows)'.dependencies.math2d]
version = "0.2.0-alpha1"
path = "../math2d"
features = ["d2d"]

[target.'cfg(windows)'.dev-dependencies]
lazy_static = "1.0"
direct3d11 = { version = "0.3.0-alpha1", path = "../direct3d11" }
image = "0.18.0"
rand = "0.4"

[features]
docs = []

